--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content %}
-
-<h1>About Page</h1>
-
+    <h2>About Page</h2>
 {% endblock %}
