--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content %}
-
-<h1>Contact Us</h1>
-
+    <h2>Contact Us</h2>
 {% endblock %}
