--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-{% for number in list_of_numbers %}
-    <p>{{ number }}</p>
-{% endfor %}
-
 <h2>{{ page_title }}</h2>
 <p>
     The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in
@@ -16,32 +12,40 @@
     business, welcomed a fourteenth to fill into their party.
 </p>
 
+{% for member in company %}
+
 <div class="row featurette">
+
+    {% if loop.index % 2 != 0 %}
+
     <div class="col-md-7">
-        <h3>Thorin Oakenshield</h3>
-        <p>
-            Thorin II was born in TA 2746 to the Dwarf prince Thráin II in the city of the Lonely Mountain. Early in his
-            youth, Thorin and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug, in TA
-            2770. While in exile, he quickly grew into a capable warrior. This was demonstrated at the Battle of
-            Azanulbizar, near Moria, in TA 2799. He fought with one of the Dwarven armies beneath Moria's East-gate, and
-            at some point in the battle, his shield broke, and, using an oaken tree branch found on the ground as a
-            shield, he gained the epithet "Oakenshield," which remained with him even in death.
-        </p>
+        <h3>{{ loop.index }}. {{  member.name }}</h3>
+        <p>{{ member.description }}</p>
     </div>
     <div class="col-md-5">
-        <img src="https://vignette.wikia.nocookie.net/lotr/images/3/3f/ThorinBIG.jpg" alt="">
+        <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
     </div>
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://vignette.wikia.nocookie.net/lotr/images/b/b4/The-Hobbit-Fili-and-Kili.jpg" alt="">
-        </div>
-        <div class="col-md-7">
-            <h3>Fili and Kili</h3>
-            <p>
-                Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother, Dís. They were also
-                nephews of Frerin, grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing
-                feature was his long nose, the longest of any of the Dwarves in Thorin's company.
-            </p>
-        </div>
+
+    {% else %}
+
+    <div class="col-md-5">
+        <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
+    </div>
+    <div class="col-md-7">
+        <h3>{{ loop.index }}. {{  member.name }}</h3>
+        <p>{{ member.description }}</p>
+    </div>
+
+    {% endif %}
+
 </div>
+
+{% if loop.index != loop.length %}
+
+<hr class="featurette-divider">
+
+{% endif %}
+
+{% endfor %}
+
 {% endblock %}
